# thesis_simulation

./: Dockerfile  HumanMotionCreator.py  LICENSE  README.md  config.yaml  data_saver.py  lidar_positioning.py  simulation.launch.py
gp_models/lidar/: lidar_module.xacro
human_models/: actor_model.xacro
indoor_spaces/: README.md  download_script.sh
ros_packages/src/gazebo_to_ros2/: CMakeLists.txt  package.xml
ros_packages/src/gazebo_to_ros2/include/: ActorPlugin.h  LidarPlugin.h
ros_packages/src/gazebo_to_ros2/src/: ActorPlugin.cpp  LidarPlugin.cpp  gazebo_to_ros2_node.cpp  lidar_republisher.cpp  lidar_tf_publisher.cpp
